# balance-robot-code

./: LICENSE  README.md  Readme.md  meson.build
src/: main.c
src/auxiliary/: meson.build
src/auxiliary/include/: auxiliary.h
src/auxiliary/src/: auxiliary.c
src/motor_control/: meson.build
src/motor_control/include/: motor_control.h
src/motor_control/src/: motor_control.c
src/mpu_6050/: meson.build
src/mpu_6050/include/: mpu_6050.h
src/mpu_6050/src/: mpu_6050.c
