
# add c compiler arguments
c_args += '-DEXAMPLE_DEF=1'

# collect source files for this folder
example_folder_srcs = ['src/motor_control.c']
# add them to the source list that is used to compile the entire firmware
srcs += files(example_folder_srcs)

# add include directories
incdirs += include_directories('include')

